map blur glitch on safari fix

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body {
   padding: 0;
 }
 
+#mapContainer {
+  display: none;
+}
+
 #map {
   position: absolute;
   top: 0;
@@ -57,7 +61,7 @@ body {
 /* A button with emoji as text - only showing the emoji. Centered and in the bottom of the page. */
 #listBtn {
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 40px;
@@ -65,21 +69,22 @@ body {
   border: none;
   cursor: pointer;
   z-index: 600;
+  touch-action: manipulation;
 }
 
 #countryList {
   z-index: 500;
   position: absolute;
+  bottom: 80px;
   width: 300px;
-  height: 90%;
-  margin-top: 2%;
-  background: #fff;
+  height: 80%;
   flex-direction: column;
   overflow-y: scroll;
   /* center on page */
   left: 50%;
   transform: translate(-50%, 0);
   display: none;
+  background: white;
 }
 
 #countryList h3 {
@@ -111,13 +116,11 @@ body {
 }
 
 .episodeItem {
-  /* background: #4caf50a6; */
   color: #322f2f;
 }
 
 .noEpisodeItem {
   /* colors that symbolize unavailable item, grayed out */
-  /* background: #d3d3d3; */
   color: #00000075;
 }
 
